1.1beta1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Renamed ezcMvcNoNamedRouteException to ezcMvcNamedRouteNotFoundException.
- Renamed ezcMvcReversedRoute to ezcMvcReversibleRoute.


1.1alpha1 - Tuesday 26 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #14250: Support for the Content-Disposition headers in the
  abstract result and response objects.
- Implemented issue #13844: Support reverse route generation: create an URL
  from an argument.
- Implemented issue #14740: Make overriding the pattern to match in routes
  easier.
- Implemented issue #14775: Prevent a fatal redirect from looping by spawning
  more fatal redirects.


1.0 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Refactored HTTP response writer to allow for user-defined status objects to
  be used.


1.0rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13920: Cookies are part of response, but not of request.
- Fixed issue #14041: MVC tutorial improvement by clarifying the
  createFatalRedirectRequest dispatcher configuration method.


1.0beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13918: Http Request Parser is missing DELETE.
- Fixed issue #14003: split() is deprecated in PHP 5.3.
- Implemented issue #13919: Added the runPreRoutingFilters() method to the
  ezcMvcDispatcherConfiguration interface and ezcMvcDispatcherConfigurable
  dispatcher, to be called after request generation, but before routing. This
  change breaks BC as it adds a new method to the ezcMvcDispatcherConfiguration
  interface.
- Implemented issue #13921: The ezcMvcConfigurableDispatcher now throws
  exceptions if the configuration does not return objects of the expected
  class.