@@ -51,9 +51,9 @@ class ezcMvcToolsControllerTest extends ezcTestCase
         $r = new ezcMvcRequest;
         $r->variables = array( 'var1' => 42, 'var42' => 'bansai!' );
         $f = new testControllerController( 'testAction', $r );
-        $f->router = new testSimpleRouter( $r );
+        $f->setRouter( new testSimpleRouter( $r ) );
 
-        self::assertEquals( new testSimpleRouter( $r ), $f->router );
+        self::assertEquals( new testSimpleRouter( $r ), $f->getRouter() );
     }
 
     public function testCreateActionMethod()
